--- a/Home.css
+++ b/Home.css
@@ -154,24 +154,29 @@
 
 @media (max-width: 1199px) {
   .u-section-2 .u-text-1 {
-    margin-right: calc(((100% - 940px) / 2) + 101px);
-    margin-left: calc(((100% - 940px) / 2));
+    width: auto;
+    margin-top: -101px;
+    margin-left: 101px;
+    margin-right: 101px;
   }
 
   .u-section-2 .u-text-2 {
+    margin-top: 47px;
     margin-right: calc(((100% - 940px) / 2) + 465px);
     margin-left: calc(((100% - 940px) / 2));
   }
 
   .u-section-2 .u-image-2 {
-    margin-left: calc(((100% - 940px) / 2));
+    margin-left: calc(((100% - 940px) / 2) + 24px);
   }
 
   .u-section-2 .u-image-3 {
-    margin-right: calc(((100% - 940px) / 2) + 50px);
+    margin-top: -138px;
+    margin-right: calc(((100% - 940px) / 2) + -33px);
   }
 
   .u-section-2 .u-text-3 {
+    margin-top: -142px;
     margin-right: calc(((100% - 940px) / 2) + 101px);
     margin-left: calc(((100% - 940px) / 2));
   }
@@ -193,7 +198,7 @@
   }
 
   .u-section-2 .u-image-3 {
-    margin-right: calc(((100% - 720px) / 2) + 50px);
+    margin-right: calc(((100% - 720px) / 2) + -33px);
   }
 
   .u-section-2 .u-text-3 {
@@ -218,7 +223,7 @@
   }
 
   .u-section-2 .u-image-3 {
-    margin-right: calc(((100% - 540px) / 2) + 20px);
+    margin-right: calc(((100% - 540px) / 2) + -33px);
   }
 
   .u-section-2 .u-text-3 {
@@ -229,17 +234,26 @@
 
 @media (max-width: 575px) {
    .u-section-2 {
-    min-height: 437px;
+    min-height: 793px;
+  }
+
+  .u-section-2 .u-image-1 {
+    margin-top: 22px;
+    margin-right: calc(((100% - 340px) / 2));
+    margin-left: auto;
   }
 
   .u-section-2 .u-text-1 {
-    margin-right: calc(((100% - 340px) / 2));
+    margin-top: -102px;
     margin-left: calc(((100% - 340px) / 2));
+    margin-right: calc(((100% - 340px) / 2));
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: calc(((100% - 340px) / 2));
-    margin-left: calc(((100% - 340px) / 2));
+    width: 340px;
+    margin-top: 67px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-2 .u-image-2 {
@@ -253,13 +267,25 @@
   }
 
   .u-section-2 .u-text-3 {
-    margin-top: -33px;
-    margin-right: calc(((100% - 340px) / 2));
-    margin-left: calc(((100% - 340px) / 2));
+    width: 340px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
   }
 } .u-section-3 {
   background-image: none;
   min-height: 620px;
+}
+
+.u-section-3 .u-image-1 {
+  width: 123px;
+  height: 123px;
+  --animation-custom_in-translate_x: 50px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 180deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 2px calc(((100% - 1140px) / 2) + -49px) 0 auto;
 }
 
 .u-section-3 .u-text-1 {
@@ -271,7 +297,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 46px auto 0 calc(((100% - 1140px) / 2) + 20px);
+  margin: -79px auto 0 calc(((100% - 1140px) / 2) + 20px);
 }
 
 .u-section-3 .u-text-2 {
@@ -286,17 +312,6 @@
   margin: 0 auto 0 calc(((100% - 1140px) / 2) + 20px);
 }
 
-.u-section-3 .u-image-1 {
-  width: 123px;
-  height: 123px;
-  --animation-custom_in-translate_x: 50px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 180deg;
-  --animation-custom_in-scale: 0.3;
-  margin: -201px calc(((100% - 1140px) / 2) + -49px) 0 auto;
-}
-
 .u-section-3 .u-image-2 {
   width: 300px;
   height: 300px;
@@ -305,28 +320,17 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 91px auto 0 calc(((100% - 1140px) / 2) + 20px);
+  margin: 14px auto 0 calc(((100% - 1140px) / 2) + 70px);
 }
 
 .u-section-3 .u-text-3 {
-  background-image: none;
-  font-size: 1rem;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: -300px calc(((100% - 1140px) / 2) + 299px) 0 calc(((100% - 1140px) / 2) + 366px);
-}
-
-.u-section-3 .u-text-4 {
   font-weight: 400;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 21px calc(((100% - 1140px) / 2) + 715px) 0 0;
+  margin: 14px calc(((100% - 1140px) / 2) + 683px) 0 calc(((100% - 1140px) / 2) + -18px);
 }
 
 .u-section-3 .u-image-3 {
@@ -337,75 +341,98 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: -134px auto -107px calc(((100% - 1140px) / 2) + 20px);
+  margin: -123px auto 0 calc(((100% - 1140px) / 2) + 70px);
+}
+
+.u-section-3 .u-text-4 {
+  background-image: none;
+  font-size: 1rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  font-style: italic;
+  margin: -515px calc(((100% - 1140px) / 2) + 206px) 60px calc(((100% - 1140px) / 2) + 459px);
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-text-1 {
-    margin-left: calc(((100% - 940px) / 2) + 20px);
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: calc(((100% - 940px) / 2) + 20px);
+   .u-section-3 {
+    min-height: 734px;
   }
 
   .u-section-3 .u-image-1 {
     margin-right: calc(((100% - 940px) / 2) + -49px);
   }
 
-  .u-section-3 .u-image-2 {
+  .u-section-3 .u-text-1 {
     margin-left: calc(((100% - 940px) / 2) + 20px);
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: calc(((100% - 940px) / 2) + 20px);
+  }
+
+  .u-section-3 .u-image-2 {
+    margin-left: calc(((100% - 940px) / 2) + 70px);
   }
 
   .u-section-3 .u-text-3 {
-    font-style: italic;
-    margin-right: calc(((100% - 940px) / 2) + 199px);
-    margin-left: calc(((100% - 940px) / 2) + 266px);
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: calc(((100% - 940px) / 2) + 515px);
+    width: auto;
+    margin-right: calc(((100% - 940px) / 2) + 533px);
+    margin-left: calc(((100% - 940px) / 2) + 33px);
   }
 
   .u-section-3 .u-image-3 {
-    margin-left: calc(((100% - 940px) / 2) + 20px);
+    margin-left: calc(((100% - 940px) / 2) + 70px);
+  }
+
+  .u-section-3 .u-text-4 {
+    width: auto;
+    margin: -460px calc(((100% - 940px) / 2) + -5px) 163px calc(((100% - 940px) / 2) + 470px);
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-text-1 {
-    margin-left: calc(((100% - 720px) / 2) + 20px);
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: calc(((100% - 720px) / 2) + 20px);
-  }
-
   .u-section-3 .u-image-1 {
     margin-right: calc(((100% - 720px) / 2) + -49px);
   }
 
-  .u-section-3 .u-image-2 {
+  .u-section-3 .u-text-1 {
     margin-left: calc(((100% - 720px) / 2) + 20px);
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-left: calc(((100% - 720px) / 2) + 20px);
+  }
+
+  .u-section-3 .u-image-2 {
+    margin-left: calc(((100% - 720px) / 2) + 70px);
   }
 
   .u-section-3 .u-text-3 {
-    margin-right: calc(((100% - 720px) / 2) + 89px);
-    margin-left: calc(((100% - 720px) / 2) + 156px);
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: calc(((100% - 720px) / 2) + 295px);
+    margin-right: calc(((100% - 720px) / 2) + 346px);
+    margin-left: calc(((100% - 720px) / 2));
   }
 
   .u-section-3 .u-image-3 {
-    margin-left: calc(((100% - 720px) / 2) + 20px);
+    margin-left: calc(((100% - 720px) / 2) + 70px);
+  }
+
+  .u-section-3 .u-text-4 {
+    margin: 20px calc(((100% - 720px) / 2) + -5px) 60px calc(((100% - 720px) / 2) + 360px);
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-3 .u-image-1 {
+    margin-top: -120px;
+    margin-right: calc(((100% - 540px) / 2) + -49px);
+  }
+
   .u-section-3 .u-text-1 {
     font-size: 1rem;
+    margin-top: 43px;
     margin-left: calc(((100% - 540px) / 2) + 20px);
   }
 
@@ -414,56 +441,67 @@
     margin-left: calc(((100% - 540px) / 2) + 20px);
   }
 
-  .u-section-3 .u-image-1 {
-    margin-right: calc(((100% - 540px) / 2) + -49px);
-  }
-
   .u-section-3 .u-image-2 {
-    margin-left: calc(((100% - 540px) / 2) + 20px);
+    margin-left: calc(((100% - 540px) / 2) + 70px);
   }
 
   .u-section-3 .u-text-3 {
-    margin-right: calc(((100% - 540px) / 2));
-    margin-left: calc(((100% - 540px) / 2) + 65px);
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: calc(((100% - 540px) / 2) + 115px);
+    margin-right: calc(((100% - 540px) / 2) + 166px);
+    margin-left: calc(((100% - 540px) / 2));
   }
 
   .u-section-3 .u-image-3 {
-    margin-left: calc(((100% - 540px) / 2) + 20px);
+    margin-left: calc(((100% - 540px) / 2) + 70px);
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-right: calc(((100% - 540px) / 2));
+    margin-left: calc(((100% - 540px) / 2) + 270px);
   }
 }
 
 @media (max-width: 575px) {
+   .u-section-3 {
+    min-height: 1189px;
+  }
+
+  .u-section-3 .u-image-1 {
+    margin-top: 17px;
+    margin-right: 0;
+  }
+
   .u-section-3 .u-text-1 {
+    font-size: 1.875rem;
+    width: auto;
+    margin-top: 21px;
     margin-left: calc(((100% - 340px) / 2) + 20px);
   }
 
   .u-section-3 .u-text-2 {
+    font-size: 1.875rem;
+    width: auto;
     margin-left: calc(((100% - 340px) / 2) + 20px);
-  }
-
-  .u-section-3 .u-image-1 {
-    margin-right: calc(((100% - 340px) / 2) + -49px);
   }
 
   .u-section-3 .u-image-2 {
-    margin-left: calc(((100% - 340px) / 2) + 20px);
+    margin-top: 60px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-text-3 {
-    margin-right: calc(((100% - 340px) / 2));
-    margin-left: calc(((100% - 340px) / 2));
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-right: calc(((100% - 340px) / 2));
+    margin-top: 21px;
+    margin-left: 41px;
+    margin-right: 41px;
   }
 
   .u-section-3 .u-image-3 {
-    margin-left: calc(((100% - 340px) / 2) + 20px);
+    margin-top: -130px;
+    margin-left: auto;
+  }
+
+  .u-section-3 .u-text-4 {
+    width: 340px;
+    margin: -95px auto 59px;
   }
 } .u-section-4 {
   background-image: none;
@@ -616,6 +654,10 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 924px;
+  }
+
   .u-section-4 .u-text-1 {
     margin-right: 151px;
     margin-left: 0;
@@ -636,20 +678,64 @@
     min-height: 447px;
   }
 
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
   .u-section-4 .u-text-2 {
-    margin-top: 193px;
+    width: auto;
+    margin-top: 91px;
+    margin-left: 25px;
   }
 
   .u-section-4 .u-text-3 {
-    margin-right: 0;
+    width: auto;
+    margin-top: 24px;
+    margin-right: 28px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .u-section-4 .u-text-4 {
+    width: auto;
+    margin-top: 91px;
+    margin-left: 25px;
   }
 
   .u-section-4 .u-text-5 {
-    margin-right: 0;
+    width: auto;
+    margin-top: 24px;
+    margin-right: 28px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .u-section-4 .u-text-6 {
+    width: auto;
+    margin-top: 91px;
+    margin-left: 25px;
   }
 
   .u-section-4 .u-text-7 {
-    margin-right: 0;
+    width: auto;
+    margin-top: 24px;
+    margin-right: 28px;
+  }
+
+  .u-section-4 .u-image-4 {
+    margin-top: -639px;
+    margin-right: -13px;
+  }
+
+  .u-section-4 .u-text-8 {
+    margin-top: 380px;
   }
 }
 
@@ -674,6 +760,18 @@
 
   .u-section-4 .u-text-2 {
     margin-top: 220px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-right: 0;
   }
 
   .u-section-4 .u-text-8 {
@@ -720,33 +818,85 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 1630px;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-top: 60px;
+  }
+
   .u-section-4 .u-line-1 {
     width: 340px;
   }
 
   .u-section-4 .u-list-1 {
-    width: 340px;
+    margin-top: 11px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-4 .u-repeater-1 {
     grid-auto-columns: 100%;
+    min-height: 1315px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-top: 30px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-top: 238px;
     font-size: 1.5rem;
+    margin-top: 58px;
+    margin-right: 109px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-top: 42px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-top: 30px;
   }
 
   .u-section-4 .u-text-4 {
     font-size: 1.5rem;
+    margin-top: 58px;
+    margin-right: 109px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-top: 42px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-top: 30px;
   }
 
   .u-section-4 .u-text-6 {
     font-size: 1.5rem;
+    margin-top: 58px;
+    margin-right: 109px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-top: 42px;
+  }
+
+  .u-section-4 .u-image-4 {
+    margin-top: -1472px;
+    margin-right: -27px;
   }
 
   .u-section-4 .u-text-8 {
-    width: 340px;
+    width: auto;
+    margin-top: 31px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -1003,9 +1153,17 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 819px;
+  }
+
   .u-section-5 .u-repeater-1 {
     grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
     min-height: 315px;
+  }
+
+  .u-section-5 .u-image-1 {
+    margin-top: -808px;
   }
 }
 
@@ -1057,6 +1215,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1379px;
+  }
+
   .u-section-5 .u-text-1 {
     font-size: 1.875rem;
   }
@@ -1066,47 +1228,10 @@
   }
 } .u-section-6 {
   background-image: none;
-  min-height: 603px;
 }
 
-.u-section-6 .u-line-1 {
-  width: 515px;
-  border-style: solid;
-  position: absolute;
-  top: 124px;
-  left: 725px;
-  transform-origin: left center 0px;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  height: 3px;
-}
-
-.u-section-6 .u-line-2 {
-  width: 515px;
-  border-style: solid;
-  position: absolute;
-  top: 124px;
-  left: 0;
-  transform-origin: left center 0px;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-}
-
-.u-section-6 .u-text-1 {
-  font-weight: 700;
-  font-size: 2.25rem;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  margin: 104px auto 0;
+.u-section-6 .u-sheet-1 {
+  min-height: 593px;
 }
 
 .u-section-6 .u-image-1 {
@@ -1117,56 +1242,80 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: -219px auto 0;
+  margin: 78px auto 0;
 }
 
-.u-section-6 .u-image-2 {
-  width: 123px;
-  height: 123px;
-  --animation-custom_in-translate_x: 50px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 180deg;
-  --animation-custom_in-scale: 0.3;
-  margin: -225px auto 0 0;
-}
-
-.u-section-6 .u-text-2 {
+.u-section-6 .u-text-1 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 300px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   line-height: 2;
-  margin: 127px 50px 60px;
+  margin: -96px 0 0;
+}
+
+.u-section-6 .u-text-2 {
+  font-weight: 700;
+  font-size: 2.25rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 300px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: -366px auto 60px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-6 .u-line-1 {
-    margin-top: 0;
-  }
-
-  .u-section-6 .u-line-2 {
-    margin-top: 0;
+  .u-section-6 .u-text-1 {
+    width: auto;
+    margin-top: 102px;
+    margin-left: 93px;
+    margin-right: 93px;
   }
 
   .u-section-6 .u-text-2 {
-    margin-right: 0;
-    margin-left: 0;
+    margin-top: -641px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-text-1 {
+    margin-left: 160px;
+    margin-right: 160px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-top: -1001px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-text-1 {
+    margin-left: 250px;
+    margin-right: 250px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-top: -6901px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-6 .u-line-1 {
-    width: 340px;
-  }
-
-  .u-section-6 .u-line-2 {
-    width: 340px;
+  .u-section-6 .u-image-1 {
+    margin-top: 1px;
   }
 
   .u-section-6 .u-text-1 {
+    margin-top: -110px;
+    margin-right: 20px;
+    margin-left: 320px;
+  }
+
+  .u-section-6 .u-text-2 {
     font-size: 1.875rem;
+    width: auto;
+    margin-top: -23264px;
   }
 } .u-section-7 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/bg.png");
@@ -1200,14 +1349,8 @@
   font-weight: 500;
   background-image: none;
   box-shadow: 2px 2px 8px 0px rgba(102,102,102,1);
-  margin: 36px auto 0;
+  margin: 36px auto 60px;
   padding: 0 99px;
-}
-
-.u-section-7 .u-image-1 {
-  width: 300px;
-  height: 300px;
-  margin: -112px auto 0;
 }
 
 @media (max-width: 1199px) {
